<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.cslending.zc.collapp.home.HomeFragment"
        android:label="@string/title_qr"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.cslending.zc.collapp.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_worksheet"
        android:name="com.cslending.zc.collapp.collections.CollectionsFragment"
        android:label="@string/title_worksheet"
        tools:layout="@layout/fragment_collections" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.cslending.zc.collapp.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />
</navigation>