<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="?attr/actionBarSize"
    android:fillViewport="true"
    android:background="#DDE8F8"
    tools:context=".account.AccountFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_expenses_title"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="#E4F0F3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <ImageView
                    android:layout_width="65dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_baseline_payments_24"
                    tools:ignore="ImageContrastCheck" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp">

                    <!-- Title, secondary and supporting text -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Collector's Expenses"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        tools:ignore="HardcodedText" />
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_expenses"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="#E4F0F3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_expenses_title">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_expenses"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    app:boxBackgroundColor="@color/white"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/logo">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/expenses_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:height="60dp"
                        android:ems="10"
                        android:hint="@string/edittext_expname_hint"
                        android:importantForAutofill="no"
                        android:inputType="textCapCharacters"
                        android:minHeight="60dp"
                        android:maxLength="255"
                        android:textColorHint="#546E7A"
                        tools:ignore="HardcodedText" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_expenses_amt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    app:boxBackgroundColor="@color/white"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/logo">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/expenses_amt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:height="60dp"
                        android:ems="10"
                        android:hint="@string/edittext_expamt_hint"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:minHeight="60dp"
                        android:textColorHint="#546E7A"
                        tools:ignore="HardcodedText" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/expenses_submit"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="300dp"
                    android:layout_height="55dp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/bs5_success"
                    android:text="@string/button_submit"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:icon="@drawable/ic_baseline_payments_24"
                    app:layout_constraintBottom_toTopOf="@+id/button_logout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="HardcodedText,TextContrastCheck" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_worksheet"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_marginTop="25dp"
            android:backgroundTint="@color/bs5_primary"
            android:text="Worksheet"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:icon="@drawable/ic_baseline_list_alt_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_expenses"
            tools:ignore="HardcodedText,TextContrastCheck" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_about"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/bs5_info"
            android:text="About"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:icon="@drawable/ic_baseline_info_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_worksheet"
            tools:ignore="HardcodedText,TextContrastCheck" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_logout"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/bs5_danger"
            android:text="Log-out"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:icon="@drawable/ic_baseline_exit_to_app_24"
            app:layout_constraintTop_toBottomOf="@id/button_about"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="HardcodedText,TextContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>